k8s/aptly-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aptly
  name: aptly-tool
  labels:
    app: aptly-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aptly-tool
  template:
    metadata:
      labels:
        app: aptly-tool
    spec:
      volumes:
      - name: aptly-config-vol
        configMap:
          name: aptly-config
      - name: aptly-storage
        persistentVolumeClaim:
          claimName: aptly-volume
      containers:
      - name: app
        image: "ghcr.io/cloud-unpacked/aptly:2"
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: aptly-config-vol
            mountPath: /etc/aptly.conf
            subPath: aptly.conf
          - name: aptly-storage
            mountPath: "/aptly-fs"
---
apiVersion: v1
kind: Service
metadata:
  namespace: aptly
  name: aptly-tool
  labels:
    app: aptly-tool
spec:
  type: ClusterIP
  selector:
    app: aptly-tool
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: aptly
  name: aptly-tool
  labels:
    app: aptly-tool
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: aptly-tool
      port:
        number: 80
  tls:
  - hosts:
    - aptly
