k8s/ftech-apt-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aptly
  name: ftech-apt-repo
  labels:
    app: ftech-apt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ftech-apt
  template:
    metadata:
      labels:
        app: ftech-apt
    spec:
      volumes:
      - name: ftech-apt-config-vol
        configMap:
          name: ftech-apt-config
      - name: aptly-storage
        persistentVolumeClaim:
          claimName: aptly-volume
      containers:
      - name: repo
        image: "nginx:1.25"
        ports:
        - containerPort: 80
        volumeMounts:
          - name: ftech-apt-config-vol
            mountPath: nginx.conf
          - name: aptly-storage
            mountPath: "/aptly-fs"
---
apiVersion: v1
kind: Service
metadata:
  namespace: aptly
  name: ftech-apt-repo
  labels:
    app: ftech-apt
spec:
  type: ClusterIP
  selector:
    app: ftech-apt
  ports:
    - protocol: TCP
      name: http
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: aptly
  name: ftech-apt-repo
  labels:
    app: ftech-apt
spec:
  ingressClassName: caddy
  rules:
  - host: test.cloudunpacked.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ftech-apt-repo
            port:
              number: 80
