k8s/nginx-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: revidian-auto-moto
  name: garage-webapp-production
  labels:
    app: garage
    type: webapp
    environment: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: garage
      type: webapp
      environment: production
  template:
    metadata:
      labels:
        app: garage
        type: webapp
        environment: production
    spec:
      imagePullSecrets:
      - name: ghcr
      containers:
      - name: webapp
        image: "ghcr.io/revidian/ram-garage:latest"
        ports:
        - containerPort: 8100
---
apiVersion: v1
kind: Service
metadata:
  namespace: revidian-auto-moto
  name: garage-webapp-production
  labels:
    app: garage
    type: webapp
    environment: production
spec:
  type: ClusterIP
  selector:
    app: garage
    type: webapp
    environment: production
  ports:
    - protocol: TCP
      name: http
      port: 8100
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: revidian-auto-moto
  name: garage-webapp-production
  labels:
    app: garage
    type: webapp
    environment: production
spec:
  ingressClassName: caddy
  rules:
  - host: garage.moto.revidian.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: garage-webapp-production
            port:
              number: 8100
  - host: garage.auto.revidian.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: garage-webapp-production
            port:
              number: 8100
